skeliaParser.py
# Generated from skelia.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class skeliaParser ( Parser ):

    grammarFileName = "skelia.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'&&'", "'||'", "'('", "')'", "'var'", 
                     "'val'", "':'", "';'", "'if'", "'elif'", "'else'", 
                     "'for'", "'<-'", "'to'", "'until'", "'by'", "'{'", 
                     "'}'", "'readline'", "'()'", "'println'", "'+'", "'-'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'^'", "<INVALID>", "<INVALID>", 
                     "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "INTNUM", "DOUBLENUM", "UnsignedInt", "UnsignedDouble", 
                      "BOOLCONST", "TYPE", "IDENT", "COMMENT", "Letter", 
                      "NonzeroDigit", "WhiteSpace", "EndOfLine", "ADDOP", 
                      "MULTOP", "POWEROP", "RELOP", "BracketsOp", "AssignOp", 
                      "Punct", "SpecSign" ]

    RULE_program = 0
    RULE_expression = 1
    RULE_boolExpr = 2
    RULE_init = 3
    RULE_statementList = 4
    RULE_statement = 5
    RULE_assign = 6
    RULE_ifStatement = 7
    RULE_condition = 8
    RULE_forStatement = 9
    RULE_rangeExpression = 10
    RULE_arithmExpression1 = 11
    RULE_arithmExpression2 = 12
    RULE_arithmExpression3 = 13
    RULE_doSection = 14
    RULE_inp = 15
    RULE_out = 16
    RULE_arithmExpression = 17
    RULE_term = 18
    RULE_chunk = 19
    RULE_factor = 20

    ruleNames =  [ "program", "expression", "boolExpr", "init", "statementList", 
                   "statement", "assign", "ifStatement", "condition", "forStatement", 
                   "rangeExpression", "arithmExpression1", "arithmExpression2", 
                   "arithmExpression3", "doSection", "inp", "out", "arithmExpression", 
                   "term", "chunk", "factor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    INTNUM=24
    DOUBLENUM=25
    UnsignedInt=26
    UnsignedDouble=27
    BOOLCONST=28
    TYPE=29
    IDENT=30
    COMMENT=31
    Letter=32
    NonzeroDigit=33
    WhiteSpace=34
    EndOfLine=35
    ADDOP=36
    MULTOP=37
    POWEROP=38
    RELOP=39
    BracketsOp=40
    AssignOp=41
    Punct=42
    SpecSign=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(skeliaParser.StatementListContext,0)


        def EOF(self):
            return self.getToken(skeliaParser.EOF, 0)

        def getRuleIndex(self):
            return skeliaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = skeliaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.statementList()
            self.state = 43
            self.match(skeliaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmExpression(self):
            return self.getTypedRuleContext(skeliaParser.ArithmExpressionContext,0)


        def boolExpr(self):
            return self.getTypedRuleContext(skeliaParser.BoolExprContext,0)


        def getRuleIndex(self):
            return skeliaParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = skeliaParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        try:
            self.state = 47
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.arithmExpression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.boolExpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(skeliaParser.ArithmExpressionContext)
            else:
                return self.getTypedRuleContext(skeliaParser.ArithmExpressionContext,i)


        def RELOP(self):
            return self.getToken(skeliaParser.RELOP, 0)

        def BOOLCONST(self, i:int=None):
            if i is None:
                return self.getTokens(skeliaParser.BOOLCONST)
            else:
                return self.getToken(skeliaParser.BOOLCONST, i)

        def boolExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(skeliaParser.BoolExprContext)
            else:
                return self.getTypedRuleContext(skeliaParser.BoolExprContext,i)


        def getRuleIndex(self):
            return skeliaParser.RULE_boolExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolExpr" ):
                listener.enterBoolExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolExpr" ):
                listener.exitBoolExpr(self)




    def boolExpr(self):

        localctx = skeliaParser.BoolExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_boolExpr)
        self._la = 0 # Token type
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 49
                    self.arithmExpression()
                    self.state = 50
                    self.match(skeliaParser.RELOP)
                    self.state = 51
                    self.arithmExpression()
                    pass

                elif la_ == 2:
                    self.state = 53
                    self.match(skeliaParser.BOOLCONST)
                    pass

                elif la_ == 3:
                    self.state = 54
                    self.match(skeliaParser.BOOLCONST)
                    self.state = 55
                    self.match(skeliaParser.RELOP)
                    self.state = 56
                    self.match(skeliaParser.BOOLCONST)
                    pass


                self.state = 63
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 59
                        _la = self._input.LA(1)
                        if not(_la==1 or _la==2):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 60
                        self.boolExpr() 
                    self.state = 65
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.match(skeliaParser.T__2)
                self.state = 67
                self.boolExpr()
                self.state = 68
                self.match(skeliaParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(skeliaParser.IDENT, 0)

        def AssignOp(self):
            return self.getToken(skeliaParser.AssignOp, 0)

        def expression(self):
            return self.getTypedRuleContext(skeliaParser.ExpressionContext,0)


        def TYPE(self):
            return self.getToken(skeliaParser.TYPE, 0)

        def getRuleIndex(self):
            return skeliaParser.RULE_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit" ):
                listener.enterInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit" ):
                listener.exitInit(self)




    def init(self):

        localctx = skeliaParser.InitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_init)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            _la = self._input.LA(1)
            if not(_la==5 or _la==6):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 73
            self.match(skeliaParser.IDENT)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 74
                self.match(skeliaParser.T__6)
                self.state = 75
                self.match(skeliaParser.TYPE)


            self.state = 78
            self.match(skeliaParser.AssignOp)
            self.state = 79
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(skeliaParser.StatementContext)
            else:
                return self.getTypedRuleContext(skeliaParser.StatementContext,i)


        def getRuleIndex(self):
            return skeliaParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)




    def statementList(self):

        localctx = skeliaParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 81
                self.statement()
                self.state = 84 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1075843680) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init(self):
            return self.getTypedRuleContext(skeliaParser.InitContext,0)


        def assign(self):
            return self.getTypedRuleContext(skeliaParser.AssignContext,0)


        def inp(self):
            return self.getTypedRuleContext(skeliaParser.InpContext,0)


        def out(self):
            return self.getTypedRuleContext(skeliaParser.OutContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(skeliaParser.IfStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(skeliaParser.ForStatementContext,0)


        def getRuleIndex(self):
            return skeliaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = skeliaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.init()
                self.state = 87
                self.match(skeliaParser.T__7)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.assign()
                self.state = 90
                self.match(skeliaParser.T__7)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.inp()
                self.state = 93
                self.match(skeliaParser.T__7)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 95
                self.out()
                self.state = 96
                self.match(skeliaParser.T__7)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 98
                self.ifStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 99
                self.forStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(skeliaParser.IDENT, 0)

        def AssignOp(self):
            return self.getToken(skeliaParser.AssignOp, 0)

        def expression(self):
            return self.getTypedRuleContext(skeliaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return skeliaParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = skeliaParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(skeliaParser.IDENT)
            self.state = 103
            self.match(skeliaParser.AssignOp)
            self.state = 104
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(skeliaParser.ConditionContext)
            else:
                return self.getTypedRuleContext(skeliaParser.ConditionContext,i)


        def doSection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(skeliaParser.DoSectionContext)
            else:
                return self.getTypedRuleContext(skeliaParser.DoSectionContext,i)


        def getRuleIndex(self):
            return skeliaParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = skeliaParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(skeliaParser.T__8)
            self.state = 107
            self.condition()
            self.state = 108
            self.doSection()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 109
                self.match(skeliaParser.T__9)
                self.state = 110
                self.condition()
                self.state = 111
                self.doSection()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 118
                self.match(skeliaParser.T__10)
                self.state = 119
                self.doSection()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolExpr(self):
            return self.getTypedRuleContext(skeliaParser.BoolExprContext,0)


        def getRuleIndex(self):
            return skeliaParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = skeliaParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(skeliaParser.T__2)
            self.state = 123
            self.boolExpr()
            self.state = 124
            self.match(skeliaParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rangeExpression(self):
            return self.getTypedRuleContext(skeliaParser.RangeExpressionContext,0)


        def doSection(self):
            return self.getTypedRuleContext(skeliaParser.DoSectionContext,0)


        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(skeliaParser.ConditionContext)
            else:
                return self.getTypedRuleContext(skeliaParser.ConditionContext,i)


        def getRuleIndex(self):
            return skeliaParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)




    def forStatement(self):

        localctx = skeliaParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_forStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(skeliaParser.T__11)
            self.state = 127
            self.match(skeliaParser.T__2)
            self.state = 128
            self.rangeExpression()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 129
                self.match(skeliaParser.T__8)
                self.state = 130
                self.condition()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==8:
                    self.state = 131
                    self.match(skeliaParser.T__7)
                    self.state = 132
                    self.match(skeliaParser.T__8)
                    self.state = 133
                    self.condition()
                    self.state = 138
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 141
            self.match(skeliaParser.T__3)
            self.state = 142
            self.doSection()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(skeliaParser.IDENT, 0)

        def arithmExpression1(self):
            return self.getTypedRuleContext(skeliaParser.ArithmExpression1Context,0)


        def arithmExpression2(self):
            return self.getTypedRuleContext(skeliaParser.ArithmExpression2Context,0)


        def arithmExpression3(self):
            return self.getTypedRuleContext(skeliaParser.ArithmExpression3Context,0)


        def getRuleIndex(self):
            return skeliaParser.RULE_rangeExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRangeExpression" ):
                listener.enterRangeExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRangeExpression" ):
                listener.exitRangeExpression(self)




    def rangeExpression(self):

        localctx = skeliaParser.RangeExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_rangeExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(skeliaParser.IDENT)
            self.state = 145
            self.match(skeliaParser.T__12)
            self.state = 146
            self.arithmExpression1()
            self.state = 147
            _la = self._input.LA(1)
            if not(_la==14 or _la==15):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 148
            self.arithmExpression2()
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 149
                self.match(skeliaParser.T__15)
                self.state = 150
                self.arithmExpression3()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmExpression1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmExpression(self):
            return self.getTypedRuleContext(skeliaParser.ArithmExpressionContext,0)


        def getRuleIndex(self):
            return skeliaParser.RULE_arithmExpression1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmExpression1" ):
                listener.enterArithmExpression1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmExpression1" ):
                listener.exitArithmExpression1(self)




    def arithmExpression1(self):

        localctx = skeliaParser.ArithmExpression1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arithmExpression1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.arithmExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmExpression2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmExpression(self):
            return self.getTypedRuleContext(skeliaParser.ArithmExpressionContext,0)


        def getRuleIndex(self):
            return skeliaParser.RULE_arithmExpression2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmExpression2" ):
                listener.enterArithmExpression2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmExpression2" ):
                listener.exitArithmExpression2(self)




    def arithmExpression2(self):

        localctx = skeliaParser.ArithmExpression2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_arithmExpression2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.arithmExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmExpression3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmExpression(self):
            return self.getTypedRuleContext(skeliaParser.ArithmExpressionContext,0)


        def getRuleIndex(self):
            return skeliaParser.RULE_arithmExpression3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmExpression3" ):
                listener.enterArithmExpression3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmExpression3" ):
                listener.exitArithmExpression3(self)




    def arithmExpression3(self):

        localctx = skeliaParser.ArithmExpression3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_arithmExpression3)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.arithmExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(skeliaParser.StatementListContext,0)


        def getRuleIndex(self):
            return skeliaParser.RULE_doSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoSection" ):
                listener.enterDoSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoSection" ):
                listener.exitDoSection(self)




    def doSection(self):

        localctx = skeliaParser.DoSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_doSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(skeliaParser.T__16)
            self.state = 160
            self.statementList()
            self.state = 161
            self.match(skeliaParser.T__17)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(skeliaParser.IDENT, 0)

        def AssignOp(self):
            return self.getToken(skeliaParser.AssignOp, 0)

        def TYPE(self):
            return self.getToken(skeliaParser.TYPE, 0)

        def getRuleIndex(self):
            return skeliaParser.RULE_inp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInp" ):
                listener.enterInp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInp" ):
                listener.exitInp(self)




    def inp(self):

        localctx = skeliaParser.InpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_inp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5 or _la==6:
                self.state = 163
                _la = self._input.LA(1)
                if not(_la==5 or _la==6):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 166
            self.match(skeliaParser.IDENT)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 167
                self.match(skeliaParser.T__6)
                self.state = 168
                self.match(skeliaParser.TYPE)


            self.state = 171
            self.match(skeliaParser.AssignOp)
            self.state = 172
            self.match(skeliaParser.T__18)
            self.state = 173
            self.match(skeliaParser.T__19)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(skeliaParser.ExpressionContext,0)

